tags/2013-08-29_cppreference/Archive/361d403c57a4e44417e10ce636effd7b-03f6cbafd195f97d3526ac9ec5d6f504/output
++ g++-4.8 -std=c++1y -O2 -Wall -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:11:25: error: invalid use of void expression
         v.push_back(f(i));
                         ^
